Update BIOS 663 Wage Project.Rmd
manual commit because my rstudio is possessed

--- a/BIOS 663 Wage Project.Rmd
+++ b/BIOS 663 Wage Project.Rmd
@@ -195,3 +195,6 @@ step(model.1, direction='backward')
 model.2 <- lm(wage ~ education+south+sex+experience+union+race+sector,data = wages)
 summary(model.2)
 ```
+
+
+#does this work?
