created complicated graph

--- a/BIOS 663 Wage Project.Rmd
+++ b/BIOS 663 Wage Project.Rmd
@@ -109,23 +109,6 @@ wages %>% ggplot(aes(x=age)) +
   geom_histogram(binwidth=5) + 
   labs(x='Years of Age', y='Count', title = 'Count of Years of Education')
 ```
-
-```{r}
-##eda dotplots of all numeric covariates vs. response
-#education
-wages %>% ggplot(aes(x=education,y=wage)) + 
-  geom_point() + 
-  labs(x='Years of Education', y='Wage', title = 'Count of Years of Education')
-#experience
-wages %>% ggplot(aes(x=experience,y=wage)) + 
-  geom_point() + 
-  labs(x='Years of Experience', y='Wage', title = 'Count of Years of Experience')
-#age
-wages %>% ggplot(aes(x=age,y=wage)) + 
-  geom_point() + 
-  labs(x='Years of Age', y='Wage', title = 'Count of Years of Education')
-```
-
 ### Interesting Metrics (group)
 
 ```{r}
@@ -220,4 +203,13 @@ summary(model.2)
 ```
 
 
-#does this work?
+```{r}
+# Numerical predictors:
+# Age, experience, education
+colnames(wages)
+
+wages %>% 
+  ggplot(.) +
+  geom_point(aes(y = wage, x = age, color = factor(race))) +
+  facet_grid(union~sex)
+```
