--- a/BIOS 663 Wage Project.Rmd
+++ b/BIOS 663 Wage Project.Rmd
@@ -17,6 +17,32 @@ wages <- wages %>% mutate(log_wage = log(wage))
 #load data - Others
 #load data - Elena
 #wages <- read.csv("CPS_85_Wages.txt", sep="")
+mean(wages$age)
+mean(wages$education)
+
+plt <- ggplot(data = wages) +
+  geom_point(aes(y = log_wage, x = age, color = factor(sex))) +
+  geom_smooth(aes(y = log_wage, x = age, color = factor(sex)),
+              method = "lm", se = F) +
+  scale_color_manual(values = c("skyblue", "hotpink1"), breaks = c(0, 1),
+                     labels = c("M", "F")) +
+  labs(x = "Age (years)",
+       y = "log(Wage)",
+       title = "log(Wage) versus Age, by Sex",
+       color = "Sex") +
+  theme_classic()
+
+plt2 <- ggplot(data = wages) +
+  geom_point(aes(y = log_wage, x = education)) +
+  geom_smooth(aes(y = log_wage, x = education),
+              method = "lm", se = F) +
+  scale_color_manual(values = c("skyblue", "hotpink1"), breaks = c(0, 1),
+                     labels = c("M", "F")) +
+  labs(x = "Education (years)",
+       y = "log(Wage)",
+       title = "log(Wage) versus Education",
+       color = "Sex") +
+  theme_classic()
 ```
 
 ### Presentation (15 minutes)
@@ -351,18 +377,29 @@ This 21 year old with 1 year of experience is getting \$44.5/hour, which is a po
 ##########  Mahalanobis Distance analysis
 
 ```{r}
-nrow(wages)
-ncol(wages)
-D2 <- mahalanobis(x = wages, center = T, cov = var(wages))
+nrow(wages[, -c(6, 12)])
+ncol(wages[, -c(6, 12)])
+D2 <- mahalanobis(x = wages[, -c(6, 12)], colMeans(wages[, -c(6, 12)]), 
+                  cov = var(wages[, -c(6, 12)]))
 plot(density(D2, bw = 0.5),
      main="Squared Mahalanobis distances, n=534, p=11") ; rug(D2)
 
-qqplot(qchisq(ppoints(nrow(wages)), df = 3), D2,
+qqplot(qchisq(ppoints(nrow(wages)), df = 10), D2,
        main = expression("Q-Q plot of Mahalanobis" * ~D^2 *
-                         " vs. quantiles of" * ~ chi[3]^2))
+                         " vs. quantiles of" * ~ chi[10]^2))
 abline(0, 1, col = 'gray')
 
-outlier_removed <- wages %>% filter(wage != 1)
+which.max((D2))
+
+plot(1:2000, pchisq(1:2000, df = 533), xlim = c(0, 2000), ylim = c(0, 1))
+
+wages[444,]
+
+wages %>% 
+  filter(age == 18)
+
+wages %>% 
+  filter(education == 16)
 ```
 
 ```{r}
